src/test/deca/syntax/valid/SansObjet/UnaryExpr2-Single.deca
// Description:
//    Not expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 09/01/2022

{
       !x;
}
